# ai-bug-resolution-system

./: .env.sample  README.md  main.py  pyproject.toml  requirements.txt
agent/: __init__.py  base.py  graph.py  nodes.py  state.py
config/: config.yaml  settings.py
data/inputs/: bug_report.md
data/outputs/: final_resolution.yaml  repro_test.py
demo_app/: inventory.py
exception/: __init__.py
logger/: __init__.py
prompt_library/: __init__.py  prompts.py  schemas.py
test/: test_framework.py  test_tools.py
tools/: __init__.py  execution_tools.py  file_tools.py
utils/: file_helpers.py
